# wide

./: .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE-MIT.txt  LICENSE-ZLIB.txt  README.md  appveyor.yml  build.rs  build.rs.bak  changelog.md  rustfmt.toml
.cargo/: config  config.toml
.cargo-ci/: config
.github/workflows/: rust.yml
benches/: fma_benchmarks.rs  math_benchmarks.rs
examples/: demo.rs  gen_f32.rs
src/: arch.rs  f32x16_.rs  f32x4_.rs  f32x8.rs  f32x8_.rs  f64x2_.rs  f64x4_.rs  f64x8_.rs  i16x16_.rs  i16x32_.rs  i16x8_.rs  i32x16_.rs  i32x4_.rs  i32x8_.rs  i64x2_.rs  i64x4_.rs  i64x8_.rs  i8x16_.rs  i8x32_.rs  i8x64_.rs  lib.rs  m_f32x4.rs  m_i32x4.rs  macros.rs  simd.rs  simd_float.rs  simd_int.rs  simd_uint.rs  u16x16_.rs  u16x32_.rs  u16x8_.rs  u32x16_.rs  u32x4_.rs  u32x8_.rs  u64x2_.rs  u64x4_.rs  u64x8_.rs  u8x16_.rs  u8x32_.rs  u8x64_.rs
src/arch/: fma.rs  rdrand.rs  sse.rs  sse2.rs  sse3.rs  sse4_1.rs  sse4_2.rs  ssse3.rs  x86.rs  x86_64.rs
src/m_f32x4/: wide_methods.rs  wide_trait_impls.rs
tests/: f32x4.rs  i32x4.rs  intel-simd-help.rs  main.rs  rdrand.rs  serde.rs  simd.rs  simd_float.rs  simd_integer.rs  simd_signed.rs  sse.rs  sse2.rs  sse3.rs  sse4_1.rs  sse4_2.rs  ssse3.rs  t_f32x4.rs  t_f32x8.rs  t_f64x2.rs  t_f64x4.rs  t_i16x16.rs  t_i16x8.rs  t_i32x4.rs  t_i32x8.rs  t_i64x2.rs  t_i64x4.rs  t_i8x16.rs  t_i8x32.rs  t_u16x8.rs  t_u32x4.rs  t_u32x8.rs  t_u64x2.rs  t_u64x4.rs  t_u8x16.rs  usefulness.rs  utils.rs
tests/all_tests/: main.rs  t_common.rs  t_f32x16.rs  t_f32x4.rs  t_f32x8.rs  t_f64x2.rs  t_f64x4.rs  t_f64x8.rs  t_i16x16.rs  t_i16x32.rs  t_i16x8.rs  t_i32x16.rs  t_i32x4.rs  t_i32x8.rs  t_i64x2.rs  t_i64x4.rs  t_i64x8.rs  t_i8x16.rs  t_i8x32.rs  t_simd.rs  t_simd_float.rs  t_simd_signed.rs  t_u16x16.rs  t_u16x32.rs  t_u16x8.rs  t_u32x16.rs  t_u32x4.rs  t_u32x8.rs  t_u64x2.rs  t_u64x4.rs  t_u64x8.rs  t_u8x16.rs  t_u8x32.rs  t_usefulness.rs  utils.rs
tests/all_tests/utils/: for_simd_types.rs  simd_chunks.rs
tests/utils/: assert_panic.rs  for_simd_types.rs  random_iter.rs  simd_chunks.rs
